# myhuggingface

./: Datasets etc.ipynb  Runproject.ipynb  pyproject.toml  tree.txt
previous/: pyproject.toml
token-classification/: .gitignore  README.md  pyproject.toml
token-classification/conf/base/: catalog.yml  globals.yml  logging.yml  parameters.yml
token-classification/conf/base/parameters/: datastats.yml  get_data.yml  labelstudio.yml  model.yml  tokenize_data.yml
token-classification/data/00_annotations/: manydoc.json  project-1-at-2022-07-31-12-19-89ed4820.json
token-classification/data/00_pre/: copy_from_container.sh  get_texts.py
token-classification/data/00_pre/get_wikipedia_pages/: Aage_Niels_Bohr.csv  Albert_Einstein.csv  Alexei_Alexejewitsch_Abrikossow.csv  Arthur_Ashkin.csv  Barry_Barish.csv  Bertram_Brockhouse.csv  Carl_David_Anderson.csv  Charles_Glover_Barkla.csv  Edward_Victor_Appleton.csv  Felix_Bloch.csv  Ferdinand_Braun.csv  Georg_Bednorz.csv  (+23 more)
token-classification/data/01_raw/: dataset_test.json  dataset_train.json  dataset_validation.json
token-classification/data/02_intermediate/: dataset_tokenized_test.json  dataset_tokenized_validation.json
token-classification/data/blab_folder/: blab_0.csv  blab_1.csv  blab_2.csv  blab_3.csv
token-classification/docs/source/: conf.py  index.rst
token-classification/notebooks/: analysis_csv.ipynb
token-classification/src/: setup.py
token-classification/src/tests/: test_run.py
token-classification/src/token_classification/: __init__.py  __main__.py  helpers.py  pipeline_registry.py  settings.py
(+51 files in other folders)
