[tool.poetry]
name = "myhuggingface"
version = "0.1.0"
description = ""
authors = ["H. Felix Wittmann <hfwittmann@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1, <3.11"
scikit-learn = "<1.0"
torch = "^1.12.0"
black = "^22.6.0"
seqeval = "^1.2.2"
transformers = "^4.20.1"
jupyter = "^1.0.0"
kedro = "^0.18.2"
flake8 = "^4.0.1"
pandas = "<=1.3.5"
datasets = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
