[tool.poetry]
name = "myhuggingface"
version = "0.1.0"
description = ""
authors = ["H. Felix Wittmann <hfwittmann@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1, <3.9"
black = "^22.6.0"
datasets = "^2.3.2"
flake8 = "^4.0.1"
jupyter = "^1.0.0"
kedro = "^0.18.2"
kedro-mlflow = "^0.11.1"
kedro-viz = "^4.7.1"
pandas = "^1.4.3"
scikit-learn = "^1.1.1"
seqeval = "^1.2.2"
tensorboard = "^2.9.1"
torch = "^1.12.0"
transformers = "^4.20.1"
sadice = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
